# doudarr

./: .gitignore  AGENTS.md  Dockerfile  README.md  bootstrap.py  collection.py  config.py  imdb.py  lists.py  main.py  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test.txt  requirements.txt  run.sh  sync.py  throttler.py  utils.py
.github/workflows/: docker-image.yml
scripts/: init_repo.sh  lint.sh  local_run.sh  test.sh  update_readme.py
scripts/hooks/: pre-commit
src/: bootstrap.py  config.py  imdb.py  lists.py  main.py  pyproject.toml  sync.py  throttler.py  utils.py
tests/: conftest.py  test_config.py  test_imdb.py  test_throttler.py
