[project]
name = "doudarr"
version = "0.1.0"
description = "Convert Douban movie lists to Radarr-compatible lists with IMDb IDs"
requires-python = ">=3.12"
dependencies = [
    "diskcache==5.6.3",
    "fastapi==0.109.2",
    "httpx[socks]==0.28.1",
    "pydantic-settings==2.2.0",
    "uvicorn[standard]==0.27.1",
]

[dependency-groups]
dev = [
    "black==23.3.0",
    "flake8==6.1.0",
    "flake8-bugbear==24.2.6",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]
